# alsdan-devhub

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVHUB_BRIEF.md  DEVHUB_PACKAGES_DASHBOARD_GUIDE.md  MOCKUP_DASHBOARD_UPGRADE_2026-03-29.html  docker-compose.yml  pyproject.toml  settings.json
.claude/: CLAUDE.md  launch.json
.claude-plugin/: plugin.json
.claude/agents/: dev_orchestrator.md  docs_agent.md  qa_agent.md
.github/workflows/: governance-check.yml  pr-quality-gate.yml
agents/: coder.md  dev-lead.md  knowledge-curator.md  planner.md  red-team.md  researcher.md  reviewer.md
config/: agent_knowledge.yml  challenge_templates.yml  documents.yml  knowledge.yml  nodes.yml
devhub/: registry.py
devhub/adapters/: __init__.py  (+1 more)
docker/: .env.dev-os.example  docker-compose.dev-os.yml
docs/: MIGRATION_PLAN.md
knowledge/: RESEARCH_AGENT_TEAMS_SPIKE.md  RESEARCH_CLAUDE_OPTIMALISATIE_CONCLUSIE.md  RESEARCH_N8N_EVENT_SCHEDULER_SPIKE.md
n8n/: Dockerfile
scripts/: generate_poc_document.py  generate_taxonomy_reference.py  governance_check.py  kwp_bootstrap.py  produce_sprint33_documents.py
tests/: test_boris_adapter.py  test_boris_adapter_extended.py  test_boris_adapter_health.py  test_boris_adapter_mentor.py  test_boris_adapter_review.py  test_boris_adapter_sprint_prep.py  test_contracts.py  test_docs_agent.py  test_governance_check.py  test_health_contracts.py  test_lifecycle.py  test_mentor_contracts.py  test_orchestrator.py  test_plugin_agents.py  test_plugin_skills.py  test_qa_agent.py  test_registry.py  test_security_contracts.py
(+154 files in other folders)
